# vda5050_interfaces

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: build.yml
include/vda5050_interfaces/json_utils/: action_parameter.hpp
include/vda5050_msgs/json_utils/: action.hpp  action_parameter.hpp  action_parameter_value.hpp  action_state.hpp  agv_position.hpp  battery_state.hpp  bounding_box_reference.hpp  connection.hpp  control_point.hpp  edge.hpp  edge_state.hpp  error.hpp  error_reference.hpp  header.hpp  info.hpp  info_reference.hpp  instant_actions.hpp  load.hpp  load_dimensions.hpp  node.hpp  node_position.hpp  node_state.hpp  order.hpp  safety_state.hpp  state.hpp  trajectory.hpp  velocity.hpp  visualization.hpp
msg/: AGVPosition.msg  Action.msg  ActionParameter.msg  ActionParameterFactsheet.msg  ActionParameterValue.msg  ActionState.msg  BoundingBoxReference.msg  Connection.msg  ControlPoint.msg  Error.msg  ErrorReference.msg  Header.msg  Info.msg  InfoReference.msg  InstantActions.msg  Load.msg  LoadDimensions.msg  NodePosition.msg  NodeState.msg  SafetyState.msg  State.msg  Velocity.msg  Visualization.msg
test/: test_json_utils.cpp
test/generator/: generator.hpp
vda5050_interfaces/: CMakeLists.txt  package.xml
vda5050_interfaces/msg/: AGVAction.msg  AGVGeometry.msg  Action.msg  ActionParameter.msg  BatteryState.msg  BlockingType.msg  Connection.msg  Edge.msg  EdgeState.msg  Envelope2d.msg  Envelope3d.msg  Factsheet.msg  LoadSet.msg  LoadSpecification.msg  MaxArrayLens.msg  MaxStringLens.msg  Node.msg  OptionalParameter.msg  Order.msg  PhysicalParameters.msg  PolygonPoint.msg  Position.msg  ProtocolFeatures.msg  ProtocolLimits.msg  Timing.msg  Trajectory.msg  TypeSpecification.msg  WheelDefinition.msg
